Fashion Blog Change
Added title

--- a/GA/GA_1_Fashion_Blog/index.html
+++ b/GA/GA_1_Fashion_Blog/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	</head>
-<title></title>
+<title>Sartre's List</title>
 
 <body>
    <div class="header">
