--- a/GA/GA_2_Traffic_Light/index.html
+++ b/GA/GA_2_Traffic_Light/index.html
@@ -6,7 +6,21 @@
 <title>Traffic Light</title>
 
 <body>
-   
 
-    </body>
+<div class="trafficlight">
+  <div class="red"></div>
+  <div class="yellow"></div>
+  <div class="green"></div>
+</div>
+
+<div class="button">
+	<a href="" class="button click">STOP</a>
+ 
+	<a href="" class="button click">CAUTION</a>
+ 
+	<a href="" class="button click">GO</a>
+</div>
+
+</body>
+
 </html>
