--- a/GA/GA_2_Traffic_Light/index.html
+++ b/GA/GA_2_Traffic_Light/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<script type="text/javascript" src="js/application.js"></script>
 	</head>
 <title>Traffic Light</title>
 
