--- a/GA/GA_3_Slideshow/index.html
+++ b/GA/GA_3_Slideshow/index.html
@@ -6,28 +6,24 @@
 	<title>Slideshow</title>
 </head>
 <body>
-
-<div class="Slides">
-	<div class="Slide">
-
-		<div class="slide" onclick="changePicture(0)"> <img src="img/photo_1.jpg"/></div>
-		<div class="slide" onclick="changePicture(1)"> <img src="img/photo_2.jpg"/></div>
-		<div class="slide" onclick="changePicture(2)"> <img src="img/photo_3.jpg"/></div>
-		<div class="slide" onclick="changePicture(3)"> <img src="img/photo_4.jpg"/></div>
-
+	
+	<div id="slides">
+		<div class="slide" onclick="changePicture(0)"><img src="img/photo_1.jpg"/></div>
+		<div class="slide" onclick="changePicture(1)"><img src="img/photo_2.jpg"/></div>
+		<div class="slide" onclick="changePicture(2)"><img src="img/photo_3.jpg"/></div>
+		<div class="slide" onclick="changePicture(3)"><img src="img/photo_4.jpg"/></div>
 	</div>
-</div>
-
-<div class="mainSlide">
-	<div class="mainImage"> <img src="img/photo_1.jpg"/></div>
-</div>		
-
-<div id="controls">
 	
-	<span id="prevButton" onclick="prevImage()" class="button">Previous</span>
-	<span id="nextButton" onclick="nextImage()" class="button">Next</span>
+	<div id="controls">
+		<span id="prevButton" onclick="prevImage()" class="button">Previous</span>
+		<span id="nextButton" onclick="nextImage()" class="button">Next</span>
+	</div>
 	
-</div>
+	<div id="mainSlide">
+		<img id="mainImage" src="img/photo_1.jpg"/></div>
+	</div>		
+
+	
 
 </body>
 </html>
